hard-gists/01b8b8e1909ae0f601c85e142f2bd15b/run.log
=== Docker Run Log for 01b8b8e1909ae0f601c85e142f2bd15b ===
Started at: Mi 29. Okt 11:20:54 CET 2025

[2025-10-29 11:20:55] START: Running container for 01b8b8e1909ae0f601c85e142f2bd15b
[2025-10-29 11:20:55] SUCCESS: Container 4fad6bab86603118bb353f6425905387db2788f5a7a87363786179174c709d11 started for 01b8b8e1909ae0f601c85e142f2bd15b
=== Container logs for 01b8b8e1909ae0f601c85e142f2bd15b ===
  File "/snippet.py", line 140
    print u'send <{}>, <{}>'.format(title, body)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 01b8b8e1909ae0f601c85e142f2bd15b ===
[2025-10-29 11:20:57] INFO: Container 4fad6bab86603118bb353f6425905387db2788f5a7a87363786179174c709d11 has stopped
